# api/createJob.go
@@ -2,10 +2,10 @@ package api
 
 import (
 	"context"
-	"time"
 
 	"github.com/danielgtaylor/huma/v2"
 	"github.com/nihiluis/jobengine/database/queries"
+	"github.com/rs/zerolog/log"
 )
 
 type CreateJobRequestBody struct {
@@ -16,24 +16,6 @@ type CreateJobRequestBody struct {
 
 type CreateJobOutput struct {
 	Body CreateJobResponseBody `json:"body"`
-}
-
-type JobOutput struct {
-	ID        string `json:"id" doc:"The ID of the job"`
-	JobType   string `json:"jobType" doc:"The type of the job"`
-	Status    string `json:"status" doc:"The status of the job"`
-	Payload   string `json:"payload" doc:"The payload of the job"`
-	Result    string `json:"result" doc:"The result of the job"`
-	CreatedAt string `json:"createdAt" doc:"The creation time of the job"`
-}
-
-func (j *JobOutput) FromQueries(q *queries.Job) {
-	j.ID = q.ID.String()
-	j.JobType = q.JobType
-	j.Status = string(q.Status)
-	j.Payload = string(q.Payload)
-	j.Result = string(q.Result)
-	j.CreatedAt = q.CreatedAt.Time.Format(time.RFC3339)
 }
 
 type CreateJobResponseBody struct {
@@ -53,6 +35,7 @@ func (api *internalAPI) createJobHandler(ctx context.Context, input *struct{ Bod
 	}
 
 	if err != nil {
+		log.Error().Err(err).Msg("failed to create job")
 		return nil, huma.Error500InternalServerError("failed to create job")
 	}
 
